k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webtorrentio
spec:
  ports:
    - name: http
      port: 7000
      targetPort: http
